# onec-formbin

./: .gitignore  AGENTS.md  Makefile  README.md  code_review.md  pyproject.toml
ai/features/: README.md
ai/features/TEMPLATE/: README.md  change-constraints.md  checklist.md  dev.jsonl  feature.md  holdout.jsonl
ai/features/ast-fidelity-v1/: README.md  change-constraints.md  checklist.md  dev.jsonl  feature.md  holdout.jsonl
ai/features/container-core-guard/: README.md  change-constraints.md  checklist.md  dev.jsonl  feature.md  holdout.jsonl
ai/features/descriptor-json-v1/: README.md  change-constraints.md  checklist.md  dev.jsonl  feature.md  holdout.jsonl
ai/features/diagnostics-v1/: README.md  change-constraints.md  checklist.md  dev.jsonl  feature.md  holdout.jsonl
automation/context/: hotspots-summary.generated.md  project-map.md  recommended-skills.generated.md
docs/: repo-map.md  verification.md  workspace-contract.md
docs/adr/: 0001-raw-first.md
docs/agent/: architecture.md  index.md  review.md  verify.md
scripts/: feature_loop.py  feature_loop_adapter.py  feature_loop_core.py  feature_resume.py  start_run.py  validate_dataset.py
scripts/qa/: agent-verify.sh  check-agent-docs.sh  codex-onboard.sh
src/onec_formbin/: __init__.py  api.py  cli.py  container.py  descriptor_json.py  diffing.py  form_ast.py  models.py  semantic_form.py  workspace.py
tests/: test_descriptor_json.py  test_diagnostics.py  test_diff.py  test_form_ast.py  test_inspect_json.py  test_pack_limits.py  test_roundtrip.py  test_semantic_form.py
tests/fixtures/: README.md
(+54 files in other folders)
